Fixing some more overflow issues and fixing pre-footer going not being included properly via barba by adding barba-update-markup data attribute for updating areas of markup

--- a/assets/styles/common/_base.scss
+++ b/assets/styles/common/_base.scss
@@ -56,9 +56,12 @@ img {
   }
 }
 
-.site-main {
+.overflow-container {
   overflow: hidden;
   position: relative;
+}
+
+.site-main {
 }
 
 // Page-content area for scroll-to
